<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:title="@string/home"
            android:id="@+id/menuHome"
            android:icon="@drawable/ic_home"/>
        <item
            android:title="@string/my_profile"
            android:id="@+id/menuProfile"
            android:icon="@drawable/ic_myprofile"/>

        <item
            android:title="@string/favorites"
            android:id="@+id/menuFavorites"
            android:icon="@drawable/ic_favorites"/>
        <item
            android:title="@string/order_history"
            android:id="@+id/menuOrderhistory"
            android:icon="@drawable/ic_orderhistory"/>

        <item
            android:title="@string/faq"
            android:id="@+id/menuFaq"
            android:icon="@drawable/ic_faq"/>
        <item
            android:title="@string/log_out"
            android:id="@+id/menulogout"
            android:icon="@drawable/ic_logout"/>
    </group>


</menu>