<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:id="@+id/rdfRL"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sr_no"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:padding="0dp"
        android:id="@+id/rdfSr"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/rdfSr"
        android:text="@string/item_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/rdfItemName"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rdfItemName"
        android:layout_toEndOf="@+id/rdfSr"
        android:text="@string/rs"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/rdftag"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rdfItemName"
        android:layout_toEndOf="@+id/rdftag"
        android:text="@string/_299_00"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:id="@+id/rdfPrice"
        />
    <Button
        android:background="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        android:text="@string/add"
        android:textSize="20sp"
        android:id="@+id/rdfADD"
        />
</RelativeLayout>