<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.RegisterHere"
    android:background="@color/colorPrimary">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/rhToolbar"
        />

    <EditText
        android:id="@+id/etRHName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:paddingStart="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@color/White"
         />
    <EditText
        android:id="@+id/etRHEmail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:paddingStart="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/White"
        android:layout_below="@id/etRHName"
        />
    <EditText
        android:id="@+id/etRHMobileNo"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_mobile_number"
        android:paddingStart="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/White"
        android:layout_below="@+id/etRHEmail"
        />
    <EditText
        android:id="@+id/etRHDelivery"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_address"
        android:paddingStart="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/White"
        android:layout_below="@+id/etRHMobileNo"
        />
    <EditText
        android:id="@+id/etRHNewPass"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:layout_below="@+id/etRHDelivery"
        android:inputType="textPassword"
        android:hint="@string/enter_new_password"
        android:background="@color/White"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/etRHCnfPass"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:layout_below="@+id/etRHNewPass"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:background="@color/White"
        />

    <Button
        android:id="@+id/btnRHRegister"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="6dp"
        android:layout_below="@id/etRHCnfPass"
        android:background="@color/black"
        android:text="@string/register"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/White"
        android:layout_centerHorizontal="true"

        />





</RelativeLayout>
