<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.ForgotPassword"
    android:background="@color/skyBlue">

    <ImageView
        android:id="@+id/imgFPlogo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:id="@+id/etOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="46dp"
        android:padding="6dp"
        android:layout_below="@id/imgFPlogo"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:hint="@string/enter_otp"

        />
    <EditText
        android:id="@+id/etNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_below="@+id/etOTP"
        android:inputType="textPassword"
        android:hint="@string/enter_new_password"
        />
    <EditText
        android:id="@+id/etCnfPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:padding="6dp"
        android:layout_below="@+id/etNewPass"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_below="@id/etCnfPass"
        android:background="@color/black"
        android:text="@string/submit"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#ffffff"

        />

</RelativeLayout>
