<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:id="@+id/rlcontent">


    <ImageView
        android:id="@+id/reslogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="0dp"
        android:src="@drawable/reslogo"
        android:layout_marginStart="5dp"
        android:padding="2dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/resname"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/name_of_restaurant"
        android:layout_toEndOf="@id/reslogo"
        android:textSize="20sp"
        android:padding="0dp"
        android:layout_marginStart="10dp"
        />

    <ImageView
        android:id="@+id/ratinglogo"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="21dp"
        android:src="@drawable/ratings" />

    <TextView
        android:id="@+id/resrating"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_below="@+id/ratinglogo"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="21dp"
        android:text="@string/_4_5" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resname"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="28dp"
        android:text="@string/rs_299_00" />


</RelativeLayout>