<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.ForgotPassword"
    android:background="@color/skyBlue">
    <ImageView
        android:id="@+id/imgFPlogo"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:id="@+id/etFPMobileNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="46dp"
        android:padding="6dp"
        android:layout_below="@id/imgFPlogo"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:hint="@string/enter_mobile_no"

        />
    <EditText
        android:id="@+id/etFPEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="46dp"
        android:padding="6dp"
        android:layout_below="@+id/etFPMobileNo"
        android:hint="@string/enter_email"
        />
    <Button
        android:id="@+id/btnFPNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="46dp"
        android:padding="6dp"
        android:layout_below="@id/etFPEmail"
        android:background="@color/black"
        android:text="@string/next"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#ffffff"

        />

</RelativeLayout>
